--- a/web/app/themes/thecenter/assets/styles/components/_short-headline.scss
+++ b/web/app/themes/thecenter/assets/styles/components/_short-headline.scss
@@ -25,7 +25,7 @@
     }
   }
   .page-header {
-    overflow: auto;
+    overflow: hidden;
     position: relative;
     max-width: 768px;
     margin-right: 36px;
