--- a/web/app/themes/thecenter/assets/styles/components/_user-content.scss
+++ b/web/app/themes/thecenter/assets/styles/components/_user-content.scss
@@ -44,7 +44,8 @@
   hr {
     height: 0;
     border: 0;
-    border-bottom: 1px solid $brand-secondary;
+    margin: 36px 0;
+    border-bottom: 1px solid $black;
     + p {
       margin-bottom: 0;
     }
@@ -70,6 +71,9 @@
       color: $bg;
       h1,h2,h3,h4,h5,h6,a,blockquote {
         animation: none;
+      }
+      hr {
+        border-bottom: 1px solid $white;
       }
     }
   }
