--- a/web/app/themes/thecenter/assets/styles/helpers/_tinymce.scss
+++ b/web/app/themes/thecenter/assets/styles/helpers/_tinymce.scss
@@ -1,3 +1,10 @@
 body#tinymce {
   margin: 12px !important;
+  padding: 16px !important;
+  color: $black !important;
+  animation: none !important;
+  background-color: $white !important;
+  a {
+    color: $blue !important;
+  }
 }
